----------------------------------------------------------------------
 OmegaT 3.6.0
----------------------------------------------------------------------
  3 Enhancements
  1 Bug fix
----------------------------------------------------------------------
3.6.0 vs 3.5.3

  Implemented requests:  

  - Re-use search window(s) with a shortcut
  https://sourceforge.net/p/omegat/feature-requests/142/

  - Allow moving the cursor anywhere in the editor
  https://sourceforge.net/p/omegat/feature-requests/821/

  - Add menus to the Search window 
  https://sourceforge.net/p/omegat/feature-requests/1164/

  Bug fixes:

  - Files can be clobbered when creating translated documents
  https://sourceforge.net/p/omegat/bugs/787/

----------------------------------------------------------------------
 OmegaT 3.5.3 update 1
----------------------------------------------------------------------
   0 Enhancement
   3 Bug fixes
   1 Localisation update
----------------------------------------------------------------------
3.5.3 update 1 vs 3.5.3

 Bug fixes:

  - Stop searching when Find window is closed
  https://sourceforge.net/p/omegat/bugs/412/

  - Trim whitespace on LingvoDSL dictionary entries
  https://sourceforge.net/p/omegat/bugs/786/

  - An error was fixed with -Dhttp.proxyHost and -Dhttp.proxyPort in 
Linux kaptain launcher

  Localisation Updates:

  - Italian localisation updated to 3.5.3 (UI, documentation, scripts, readme)

----------------------------------------------------------------------
 OmegaT 3.5.3 (2015-12-02)
----------------------------------------------------------------------
  23 Enhancements
   6 Bug fixes
   8 Localisation updates
----------------------------------------------------------------------
3.5.3 vs 3.5.2 update 1

  Implemented requests:  

  - Add sentence case to Shift+F3 case change 
  https://sourceforge.net/p/omegat/feature-requests/1134/

  - Improve glossary matching of terms containing numbers