@@ -2,7 +2,7 @@
  OmegaT 3.6.0
 ----------------------------------------------------------------------
   3 Enhancements
-  1 Bug fix
+  2 Bug fixes
 ----------------------------------------------------------------------
 3.6.0 vs 3.5.3
 
@@ -18,6 +18,9 @@
   https://sourceforge.net/p/omegat/feature-requests/1164/
 
   Bug fixes:
+
+  - Custom text color used for text in dialogs
+  https://sourceforge.net/p/omegat/bugs/725/
 
   - Files can be clobbered when creating translated documents
   https://sourceforge.net/p/omegat/bugs/787/
